fixing change to mobile navbar, where setting visibility to hidden rather than display none made the items too large, added display none via media queries for mobile users

--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -68,6 +68,10 @@
         z-index: 1;
     }
 
+    .nav-link-text {
+        display: none;
+    }
+
     .navbar-nav {
         width: 100vw;
         flex-direction: row;
